--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,35 +22,22 @@ services:
         networks:
             - sail
         depends_on:
-            - mysql
             - redis
             - meilisearch
             - mailpit
             - selenium
-    mysql:
-        image: 'mysql/mysql-server:8.0'
-        ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    sqlite:
+        image: 'php:8.1-cli-alpine'
+        command: >
+            sh -c "apk add --no-cache sqlite
+                   && touch database/database.sqlite
+                   && chown -R www-data:www-data database
+                   && php artisan migrate --seed"
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - '.:/var/www/html'
+        working_dir: /var/www/html
         networks:
             - sail
-        healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - '-p${DB_PASSWORD}'
-            retries: 3
-            timeout: 5s
     redis:
         image: 'redis:alpine'
         ports:
@@ -104,8 +91,6 @@ networks:
     sail:
         driver: bridge
 volumes:
-    sail-mysql:
-        driver: local
     sail-redis:
         driver: local
     sail-meilisearch:
